# gitsecrets

./: README.md  pyproject.toml
.github/workflows/: ci.yml
gitsecrets/: __init__.py  cli.py  patterns.py  scanner.py
tests/: test_patterns.py
